--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <title>Rock Paper Scissors</title>
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Rock Paper Scissors</h1>
+    <p>Run "game();" from the console to play... for now.</p>
+  </body>
 </html>
