--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <h1>Rock Paper Scissors</h1>
-    <p>Run "game();" from the console to play... for now.</p>
+    <div class="buttons">
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissors">Scissors</button>
+    </div>
+    <div>
+      <h2 class="result">Result:</h2>
+      <h2 class="score">Score:</h2>
+    </div>
   </body>
 </html>
