added more ui and winner()

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <button class="scissors">Scissors</button>
     </div>
     <div>
+      <h2 class="computer">We are playing first to 5 score!</h2>
       <h2 class="result">Result:</h2>
-      <h2 class="score">Score:</h2>
+      <h2 class="score">Score: 0 : 0</h2>
     </div>
   </body>
 </html>
